--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 /* Estilos Padrões */
 
 html{
-  /* --black: #000;
-  --white: #fff; */
+  --black: #000;
+  --white: #fff;
 
   --blue-light: #44a9fc;
   --blue-regular: #3399ee;
@@ -21,6 +21,20 @@ html{
   --black-dark: #232c33;
 }
 
+body{
+  font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+h1{
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+  line-height: 1.2;
+}
+
+p{
+  line-height: 1.5;
+}
+
 .container{
   max-width: 1200px;
   margin-left: auto;
@@ -28,8 +42,28 @@ html{
   padding-left: 1rem;
   padding-right: 1rem;
 }
+
+.cta{
+  margin-top: 2rem;
+  display: inline-block;
+  font-family: "Poppins", sans-serif;
+  font-size: 1.125rem;
+  font-weight: 700;
+  text-align: center;
+  text-transform: uppercase;
+  color: var(--white);
+  padding: 1rem 4rem;
+  background-color: var(--green-regular);
+  border-radius: 5px;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.16);
+  transition: 0.3s ease;
+}
+
+.cta:hover{
+  background: var(--green-dark);
+}
   
-  /* HEADER */
+/* HEADER */
   
 .header{
   position: fixed;
@@ -60,8 +94,7 @@ html{
   display: inline-block;
   font-family: "Poppins", sans-serif;
   font-size: 1rem;
-  line-height: 1;
-  color: #fff;
+  color: var(--white);
   text-transform: uppercase;
   border-bottom: 2px solid transparent;
   padding: 5px 0;
@@ -70,6 +103,30 @@ html{
   
 .header li a:hover,
 .header li a.ativo{
-  border-bottom: 2px solid #fff;
+  border-bottom: 2px solid var(--white);
 }
-  
+
+/* MAIN */
+
+.main{
+  margin-top: 68px;
+  width: 100%;
+  height: 500px;
+  background: url("../img/bg-home.jpg") no-repeat center center;
+  background-size: cover;
+  color: var(--white);
+  text-align: center;
+  display: flex;
+  align-items: center;
+}
+
+.main h1{
+  font-size: 2.25rem;
+  text-transform: uppercase;
+}
+
+.main p{
+  font-size: 1.125rem;
+  font-style: italic;
+  margin-top: 1rem;
+}
