--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@ html{
   --black: #000;
   --white: #fff;
 
+  --sombra-light: rgba(0, 0, 0, 0.08);
+  --sombra-regular: rgba(0, 0, 0, 0.16);
+  --sombra-dark: rgba(0, 0, 0, 0.32);
+
   --blue-light: #44a9fc;
   --blue-regular: #3399ee;
   --blue-dark: #2188de;
@@ -37,7 +41,7 @@ h1, h2, h3{
   line-height: 1.2;
 }
 
-p{
+p, q{
   font-size: 0.875rem;
   line-height: 1.5;
 }
@@ -62,7 +66,7 @@ p{
   padding: 1rem 4rem;
   background-color: var(--green-regular);
   border-radius: 5px;
-  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.16);
+  box-shadow: 2px 2px 2px var(--sombra-regular);
   transition: 0.3s ease;
 }
 
@@ -86,7 +90,7 @@ p{
   width: 100%;
   padding: 1.25rem 0;
   background: linear-gradient(135deg, var(--blue-light), var(--blue-dark));
-  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.16);
+  box-shadow: 0 2px 2px var(--sombra-regular);
   z-index: 100;
 }
   
@@ -201,4 +205,40 @@ p{
   text-decoration: underline;
 }
 
+/* DEPOIMENTOS HOME */
+
+.depoimentos-home{
+  width: 100%;
+  background: var(--white-regular);
+  text-align: center;
+}
+
+.depoimentos-lista{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 2rem;
+  text-align: left;
+  padding: 2rem 0;
+}
+
+.depoimentos-lista li{
+  display: grid;
+  grid-template-columns: auto minmax(200px, 1fr); /* Esse auto é para não interfirir no tamanho da imagem */
+  gap: 1rem;
+  align-items: center;
+}
+
+.depoimentos-lista img{
+  border-radius: 50%;
+  box-shadow: 2px 2px 2px var(--sombra-light);
+}
+
+.depoimentos-lista h3{
+  font-size: 1.125rem;
+  margin-bottom: 1rem;
+}
+
+.depoimentos-lista q{
+  font-style: italic;
+}
 
