--- a/css/style.css
+++ b/css/style.css
@@ -263,7 +263,6 @@ p, q{
   border-radius: 5px;
 }
 
-
 /* SOBRE HOME */
 
 .sobre-home{
@@ -308,4 +307,87 @@ p, q{
   text-align: right;
   color: var(--black-light);
   margin-top: 1rem;
+}
+
+/* FOOTER */
+
+.footer{
+  width: 100%;
+  background: var(--black-regular);
+  padding-top: 1rem;
+  color: var(--white-light);
+}
+
+.footer h3{
+  font-size: 1.125rem;
+  text-transform: uppercase;
+  margin-bottom: 1rem;
+}
+
+.footer li a{
+  display: inline-block;
+  font-size: 0.875rem;
+  color: var(--white-light);
+  transition: 0.1s ease-out;
+}
+
+.footer li a:hover{
+  text-decoration: underline;
+}
+
+.footer-container{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 1rem;
+}
+
+.footer-container > li + li{
+  padding-left: 2rem;
+  border-left: 1px solid var(--black-light);
+}
+
+.mapa-do-site li + li{
+  margin-top: 0.25rem;
+}
+
+.footer-contato li + li{
+  margin-top: 0.5rem;
+}
+
+.redes-sociais{
+  display: grid;
+  grid-template-columns: repeat(4, 2rem);
+  gap: 0.5rem;
+}
+
+.redes-sociais li{
+  background: var(--blue-dark);
+  border-radius: 5px;
+  transition: 0.2s ease;
+}
+
+.redes-sociais li a{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 2rem;
+  height: 2rem;
+}
+
+.redes-sociais li:hover{
+  background: var(--blue-light);
+}
+
+.copyright {
+  width: 100%;
+  background: linear-gradient(135deg, var(--blue-light), var(--blue-dark));
+  padding: 2rem 1rem;
+  text-align: center;
+  margin-top: 4rem;
+  box-sizing: border-box;
+}
+
+.copyright p {
+  font-family: "Poppins", sans-serif;
+  color: var(--white);
 }
