--- a/css/contato.css
+++ b/css/contato.css
@@ -44,6 +44,8 @@
     border: 1px solid var(--white-dark);
     border-radius: 5px;
     padding: 2rem;
+    max-width: 480px;
+    box-sizing: border-box;
 }
 
 .form label, .form input, .form select, .form textarea, .form button{
