--- a/css/contato.css
+++ b/css/contato.css
@@ -44,6 +44,7 @@
     border: 1px solid var(--white-dark);
     border-radius: 5px;
     padding: 2rem;
+    width: 100%;
     max-width: 480px;
     box-sizing: border-box;
 }
